

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/back3"
        android:orientation= "vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PIN_recovery"
            android:gravity="center"
            android:textColor="#000000"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="10dp"
            android:background="#C0C0C0"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:text="@string/GramVaani_Sochna"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textSize="25sp"
            android:typeface="serif" />

        <EditText
            android:id="@+id/phonevalue1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Enter_the_registered_Phone"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:textColor="#000000"
            android:textSize="20dp"
            android:inputType="numberDecimal" >
            <requestFocus />
        </EditText>



        <Button
            android:id="@+id/phonesubmit"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@drawable/nice_button"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:text="@string/Receive_new_pin" />



    </LinearLayout>
    <TextView
        android:id="@+id/textView3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Powered"
        android:textColor="#000"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_vertical|center_horizontal" />



</RelativeLayout>

